--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       h2 {position: absolute;
         top: 100px;}
       h3 {position: absolute;
-        top: 600px}
+        bottom: 50px}
       ol {position: absolute;
         top: 150px;}
       ul {position: absolute;
@@ -55,11 +55,13 @@
   <li><b>Divide the haggis evenly between your slices of bread,</b> top with cheddar cheese, and place under the broiler until the cheese has melted. Top with a pinch of salt and pepper to garnish, and enjoy!</li>
 </ol>
 
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
 <!-- Wrapping an image in <p> allows styling without having to edit the img into a block apparently. Quick fix for this nightmare of absolute positions. -->
-<p style="text-align: center;"><img src="images/warcraft_ironforge_rations.jpg" style="width: 450px;height: 300px;" class="center"></p>
+<p style="text-align: center;"><img src="images/warcraft_ironforge_rations.jpg" style="width: 600px;height: 400px;" class="center"></p>
 
 <h3>Contact Me</h3>
-<a style="position: absolute; top: 640px;" href="mailto:ian.mcgowan@umconnect.umt.edu">ian.mcgowan@umconnect.umt.edu</a>
+<a style="position: absolute; bottom: 45px;" href="mailto:ian.mcgowan@umconnect.umt.edu">ian.mcgowan@umconnect.umt.edu</a>
 
 <p style="position: absolute; bottom: 0px;">Background Image by rawpixel.com on Freepik. Photo of rations found <a href="https://www.justsaying.asia/giveaway-win-world-of-warcraft-inspired-meals-and-burning-crusade-classic-subscription/ironforge-rations/" target="_blank">here</a>.</p>
 
